k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: admision-2025-i-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: admision-2025-i-app
    template:
        metadata:
            labels:
                app: admision-2025-i-app
        spec:
            containers:
                - name: admision-2025-i-container
                  image: 365227208102.dkr.ecr.us-east-2.amazonaws.com/admision-2025-i:latest
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: '256Mi'
                          cpu: '100m'
                      limits:
                          memory: '512Mi'
                          cpu: '200m'
