k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: admision-2025-i-service
    namespace: default
spec:
    selector:
        app: admision-2025-i-app
    ports:
        - protocol: TCP
          port: 80
          name: http
          targetPort: 3000
    type: ClusterIP
